--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run install-missing-dependencies && npm run serve",
+    "install-missing-dependencies": "npm i",
+    "serve": "http-server"
   },
   "keywords": [],
   "author": "",
