--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run install-missing-dependencies && npm run build && npm run serve",
     "install-missing-dependencies": "npm i",
-    "build":"webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js",
     "serve": "http-server"
   },
   "keywords": [],
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "http-server": "^14.1.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
