--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.10.5",
+    "@webgpu/types": "^0.1.40",
     "http-server": "^14.1.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
