--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "devDependencies": {
+    "raw-loader": "^4.0.2"
   }
 }
